# rust-mikrotik

./: .gitignore  CONTRIBUTING.md  CRAWLING.md  Cargo.toml  LICENSE-MIT  README.md  justfile  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  dependabot.yml
.github/actions/setup-rbmt/: action.yml
.github/workflows/: audit.yml  pr-labeler.yml  rust.yml  simnet.yml  simulation.yml
mikrotik-client/: Cargo.toml  README.md
mikrotik-client/examples/: raw_call.rs
mikrotik-client/src/: builder.rs  client.rs  config.rs  error.rs  lib.rs  print.rs  print_checks.rs  transport.rs
mikrotik-client/src/commands/: interface.rs  ip.rs  mod.rs  queue.rs  routing.rs  service.rs  snmp.rs  system.rs  tool.rs  user.rs
mikrotik-client/tests/: live_router.rs
mikrotik-common/: Cargo.toml  README.md
mikrotik-common/src/: format.rs  lib.rs  logging.rs  parse.rs  redaction.rs  row.rs  serde.rs
mikrotik-crawler/: Cargo.toml  README.md
mikrotik-crawler/examples/: qemu_runner_crawl.rs
mikrotik-crawler/src/: collected.rs  config.rs  connector.rs  discovery.rs  error.rs  lib.rs  oneshot.rs  resolver.rs  service.rs  snapshot.rs  state.rs  telemetry.rs
mikrotik-crawler/src/snapshot/: collector.rs
mikrotik-crawler/src/snapshot/sections/: auxiliary.rs  interface.rs  ip.rs  mod.rs  platform.rs  routing.rs  system.rs
mikrotik-fleet/: README.md
mikrotik-graphviz/: Cargo.toml  README.md
mikrotik-graphviz/src/: constants.rs  error.rs  lib.rs  options.rs  render.rs  snapshot.rs
mikrotik-graphviz/src/graph/: address_index.rs  builder.rs  constraints.rs  edge.rs  endpoint.rs  escape.rs  export.rs  layout.rs  mod.rs  model.rs  node.rs  rank.rs  style.rs  tests.rs
mikrotik-graphviz/src/graph/builder/: bgp.rs  l3.rs  merge.rs  neighbor.rs  registration.rs
mikrotik-graphviz/src/templates/: graphviz.html
mikrotik-proto/: Cargo.toml
mikrotik-proto2/: Cargo.toml  README.md
mikrotik-proto2/src/: codec.rs  command.rs  connection.rs  error.rs  handshake.rs  lib.rs  macros.rs  response.rs  tag.rs  word.rs
mikrotik-proto2/tests/: integration.rs  proptest.rs
mikrotik-qemu-runner/: Cargo.toml  README.md
mikrotik-qemu-runner/examples/: one_device.rs  two_devices.rs
mikrotik-qemu-runner/scenarios/: config-stress.toml  isp-network.toml  one-router.toml  three-router-with-bgp.toml  two-router.toml  version-stress-test.toml
mikrotik-qemu-runner/src/: catalog.rs  chr.rs  error.rs  lib.rs  manifest.rs  mikrotikd.rs  qemu.rs  scenario.rs
mikrotik-qemu-runner/tests/: scenarios.rs
mikrotik-simnet/: Cargo.toml  README.md
mikrotik-simnet/src/: catalog.rs  error.rs  lib.rs  main.rs  mermaid.rs  parser.rs  qemu.rs  runner.rs  simulation_report.rs  tests.rs  topology.rs  versions.rs
mikrotik-simnet/tests/: gated.rs
mikrotik-simnet/topologies/: isp-edge.toml  single-router.toml  stress-test.toml  three-router-bgp.toml  two-router.toml
mikrotik-types/: Cargo.toml  README.md
mikrotik-types/src/: abstractions.rs  device.rs  lib.rs  target.rs  topology.rs
mikrotik-types/src/api/: interface.rs  ip.rs  mod.rs  queue.rs  routing.rs  service.rs  snmp.rs  system.rs  tool.rs  user.rs
mikrotik-types/src/primitives/: interface.rs  ip.rs  mod.rs  routing.rs  system.rs
topologies/: isp-edge.toml  single-router.toml  three-router-bgp.toml  two-router.toml
