[package]
name = "mikrotik-client"
description = "A binary RouterOS API client for MikroTik devices"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace Dependencies
mikrotik-common = { path = "../mikrotik-common" }
mikrotik-proto2 = { path = "../mikrotik-proto2", features = ["std"] }
mikrotik-types = { path = "../mikrotik-types" }
# External Dependencies
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "sync", "time"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["tls12"] }
tracing = { workspace = true }
# Pinned transitive deps:
anyhow = { version = "1.0.103", default-features = false } # blame: uuid@1.23.4 -> getrandom@0.4.2 -> wasip3@0.4.0+wasi-0.3.0-rc-2026-01-06 -> wit-bindgen@0.51.0 -> anyhow (RUSTSEC-2026-0190)
bytes = { version = "1.11.1", default-features = false } # blame: tokio@1.52.3 -> bytes
ring = { version = "0.17.12", default-features = false } # blame: rustls-webpki@0.103.13 (RUSTSEC-2025-0009)
rustls-webpki = { version = "0.103.13", default-features = false } # blame: rustls@0.23.40 -> rustls-webpki

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.rbmt]
lint = { allowed_duplicates = [
  "getrandom",
  "syn",
  "windows-sys",
] }
