[package]
name = "mikrotik-common"
description = "Shared internals for rust-mikrotik crates"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# External Dependencies
serde.workspace = true
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }

[lints]
workspace = true
