[package]
name = "mikrotik-crawler"
description = "Long-running MikroTik RouterOS neighbor discovery and snapshot collection"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "crawler"
path = "src/bin/crawler.rs"

[dependencies]
# Workspace Dependencies
mikrotik-client = { path = "../mikrotik-client" }
mikrotik-common = { path = "../mikrotik-common", features = ["tracing-subscriber"] }
mikrotik-graphviz = { path = "../mikrotik-graphviz" }
mikrotik-qemu-runner = { path = "../mikrotik-qemu-runner" }
mikrotik-types = { path = "../mikrotik-types" }
# External Dependencies
argh = { workspace = true }
serde = { workspace = true }
time = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[package.metadata.rbmt]
lint = { allowed_duplicates = [
  "argh_shared",
  "getrandom",
  "syn",
  "windows-sys",
] }
