[package]
name = "mikrotik-graphviz"
description = "Graphviz construction and export for MikroTik RouterOS device snapshots"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace Dependencies
mikrotik-client = { path = "../mikrotik-client" }
mikrotik-types = { path = "../mikrotik-types" }
# External Dependencies
serde.workspace = true
time.workspace = true

[lints]
workspace = true

[package.metadata.rbmt]
lint = { allowed_duplicates = [
  "getrandom",
  "windows-sys",
] }
