[package]
name = "mikrotik-graphviz"
description = "Graphviz construction and export for MikroTik RouterOS device snapshots"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace Dependencies
mikrotik-types = { path = "../mikrotik-types" }
# External Dependencies
serde = { workspace = true }

[lints]
workspace = true
