[package]
name = "mikrotik-proto"
description = "Sans-IO protocol implementation for MikroTik RouterOS API"
version = "0.2.0"
edition = "2024"
authors = ["Alessandro Ferrara"]
license = "AGPL-3.0-only"
repository = "https://github.com/ferrohd/mikrotik-rs"

[lib]

[features]
std = []

[dependencies]
thiserror = { workspace = true }
uuid = { workspace = true }
hashbrown = { workspace = true }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
