[package]
name = "mikrotik-proto2"
description = "Sans-IO protocol implementation for MikroTik RouterOS API (Vendored from the original mikrotik-proto)"
version = "0.2.0"
authors = ["Alessandro Ferrara", "Luis Schwab <dev@luisschwab.net>"]
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true

[features]
std = []

[dependencies]
# External Dependencies
hashbrown = { version = "0.17" }
thiserror = { version = "2.0", default-features = false }
uuid = { version = "1.23.4", default-features = false, features = ["v4"] }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
