[package]
name = "mikrotik-simnet"
description = "MikroTik network simulation harness, powered by QEMU"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.rbmt.lint]
allowed_duplicates = [
  "argh_shared",
  "wit-bindgen",
]

[dependencies]
mikrotik-client = { path = "../mikrotik-client" }
mikrotik-types = { path = "../mikrotik-types" }
argh.workspace = true
indexmap = { version = "2.14.0" } # floor for toml_edit minimal-version resolution
lazy_static = { version = "1.5.0" } # floor for sharded-slab minimal-version resolution
nu-ansi-term = { version = "0.50.3" } # floor for tracing-subscriber minimal-version resolution
serde.workspace = true
sharded-slab = { version = "0.1.7" } # floor for tracing-subscriber minimal-version resolution
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = { version = "0.8.23" }
tracing.workspace = true
tracing-subscriber.workspace = true
xshell = { version = "0.3.0-pre.2" }

[lints]
workspace = true
