[package]
name = "mikrotik-types"
description = "Versionless data models for MikroTik's API"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
memchr = { version = "2.4.1", default-features = false }
serde.workspace = true
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
time = { version = "0.3.41", default-features = false, features = ["alloc", "serde"] }

[lints]
workspace = true
