[package]
name = "mikrotik-types"
description = "Versionless data models for MikroTik's API"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace Dependencies
mikrotik-common = { path = "../mikrotik-common" }
# External Dependencies
memchr = { version = "2.7.0", default-features = false } # blame: zip@7.2.0 needs ^2.7 for CHR archive unpacking
serde.workspace = true
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
time = { version = "0.3.41", default-features = false, features = ["alloc", "serde"] }

[lints]
workspace = true
