[package]
name = "mikrotik-types"
description = "Versionless data models for MikroTik's API"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace Dependencies
mikrotik-common = { path = "../mikrotik-common" }
# External Dependencies
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["alloc", "serde"] }

[lints]
workspace = true
